@startuml

title __GAMEOBJECT's Class Diagram__\n

  namespace Game {
    namespace bject {
      class GameObject.Comoara {
          - entered : boolean
          - startScale : float
          - startX : int
          - startY : int
          + Comoara()
          + getBounds()
          + mapCollision()
          + render()
          + tick()
      }
    }
  }
  

  namespace Game {
    namespace bject {
      abstract class GameObject.GameObject {
          # facing : boolean
          # scale : float
          # speedX : int
          # speedY : int
          # x : int
          # y : int
          + GameObject()
          + GameObject()
          {abstract} + getBounds()
          + getId()
          + getScale()
          + getSpeedX()
          + getSpeedY()
          + getX()
          + getY()
          + isEnemy()
          + isFacing()
          {abstract} + mapCollision()
          {abstract} + render()
          + setFacing()
          + setSpeedX()
          + setSpeedY()
          + setX()
          + setY()
          {abstract} + tick()
      }
    }
  }
  

  namespace Game {
    namespace bject {
      enum ID {
        Comoara
        Enemy_Ciuperca
        Enemy_Eye
        Enemy_Goblin
        Enemy_Skeleton
        Enemy_Slime
        Inima
        Player
        bubble
      }
    }
  }
  

  namespace Game {
    namespace bject {
      class GameObject.Inima {
          - img : BufferedImage
          + Inima()
          + getBounds()
          + mapCollision()
          + render()
          + tick()
      }
    }
  }
  

  namespace Game {
    namespace bject {
      class GameObject.SpeechBubbles {
          - gif : ImageIcon
          - triggerZone : Rectangle
          - triggered : boolean
          + SpeechBubbles()
          + getBounds()
          + mapCollision()
          + render()
          + tick()
      }
    }
  }
  

  GameObject.Comoara -up-|> GameObject.GameObject
  GameObject.Comoara o-- SpriteSheet.Animation : animation
  GameObject.Comoara o-- ChestiiRandom.MutableBoolean : inAnimation
  GameObject.GameObject o-- GameObject.ID : id
  GameObject.Inima -up-|> GameObject.GameObject
  GameObject.SpeechBubbles -up-|> GameObject.GameObject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
